arch/arm/include/asm/resume-trace.h
@@ -1,7 +1,0 @@
-#ifndef _ASM_ARM_RESUME_TRACE_H
-#define _ASM_ARM_RESUME_TRACE_H
-
-#define TRACE_RESUME(dev) do { } while (0)
-
-#endif /* _ASM_ARM_RESUME_TRACE_H */
-
