drivers/btport/stdio.h
@@ -1,4 +1,0 @@
-#ifndef _STDIO_H
-#define _STDIO_H
-#endif
-
