drivers/btport/stdlib.h
@@ -1,4 +1,0 @@
-#ifndef _STDLIB_H
-#define _STDLIB_H
-#endif
-
