drivers/btport/string.h
@@ -1,4 +1,0 @@
-#ifndef _STRING_H
-#define _STRING_H
-#endif
-
